fixed the spacing under banner for edit and show pages

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -65,7 +65,7 @@ section{
 }
 // CONTAINER
 .spacing-under-banner{
-  height:350px;
+  height:230px;
 }
 .posts-wrapper{
   a{
@@ -177,7 +177,7 @@ section{
   transition: all 1s;
 
   #new-post-banner-section{
-    height: 431px;
+    height: 300px;
     background-image: url('desktop-banner-img.png');
     background-position: center;
     background-size: cover;
@@ -194,7 +194,7 @@ section{
   }
   .banner-heading{
     position: absolute;
-    font-size: 700%;
+    font-size: 500%;
     margin: 0;
     width: 100%;
     color: rgba(255, 255, 255, 0.5);
@@ -246,7 +246,7 @@ section{
 }
 
 .page-container{
-  margin: 30px auto 30px;
+  margin: 50px auto 50px;
   width: auto;
   max-width: 860px;
 }
